product page finished

--- a/product/product.html
+++ b/product/product.html
@@ -39,8 +39,8 @@
       <div class="product">
         <img class="product-image">
         <div class="information">
-          <h2 class="product-name">iPhone 8 Plus</h2>
-          <p class='product-info'>This is newest iPhone, 256gb x.x inch,</p>
+          <h2 class="product-name"></h2>
+          <p class='product-info'></p>
 
           <div class="buttons">
             <button class="decrease-amount amountBtn">-</button>
@@ -49,6 +49,7 @@
             <div class="product-price"></div>
           </div>
           <button class="add-div">Add to cart</button>
+          <div class="successful">Product successfully added to cart,<a href="../cart/cart.html" class="cart-link">Go to cart</a></div>
         </div>
       </div>
 
